add HTML semantic & fix the locations sections

--- a/TeaCozy/index.html
+++ b/TeaCozy/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tea Cozy</title>
     <link rel="stylesheet" type="text/css" href="./Resources/style.css">
   </head>
@@ -17,64 +18,71 @@
         </nav>
       </header>
 
-      <div class="about">
-        <div class="image-text-content">
+      <section class="about">
+        <article class="image-text-content">
           <h2 id="about-title"><strong>Our Mission</strong></h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
           Fair Trade, Organic Tea</h4>
-        </div>
-      </div>
+        </article>
+      </section>
 
 
-      <div class="feature-text">
+      <artical class="feature-text">
         <h2 id="feature-title"><strong>Tea of the Month</strong></h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
-      </div>
+      </artical>
 
-      <div class="features">
-        <div class="feature">
+      <artical class="features">
+        <section class="feature">
           <img src="./Resources/images/img-berryblitz.jpg">
           <h4 class="feat-img-txt">Fall Berry Blitz Tea</h4>
-        </div>
-        <div class="feature">
+        </section>
+        <section class="feature">
           <img src="./resources/images/img-spiced-rum.jpg">
           <h4 class="feat-img-txt">Spiced Rum Tea</h4>
-        </div>
-        <div class="feature">
+        </section>
+        <section class="feature">
           <img src="./resources/images/img-donut.jpg">
           <h4 class="feat-img-txt">Seasonal Donuts</h4>
-        </div>
-        <div class="feature">
+        </section>
+        <section class="feature">
           <img src="./resources/images/img-myrtle-ave.jpg">
           <h4 class="feat-img-txt">Myrtle Ave Tea</h4>
-        </div>
-        <div class="feature">
+        </section>
+        <section class="feature">
           <img src="./resources/images/img-bedford-bizarre.jpg">
           <h4 class="feat-img-txt">Bizarre Bedford Tea</h4>
-        </div>
-      </div>
+        </section>
+      </artical>
+<!-- LOCATION  -->
 
-      <div class="location-container">
+      <artical class="location-container">
         <h2 id="location-title"><strong>Locations</strong></h2>
-        <div class="location">
-          <h3><strong>Downtown</strong></h3>
-          <h4>384 West 4th St</h4>
-          <h4>Suite 108</h4>
-          <h4>Portland, Maine</h4>
-        </div>
-        <div class="location">
-          <h3><strong>East Bayside</strong></h3>
-          <h4>3433 Phisherman's Avenue</h4>
-          <h4>(Northwest Corner)</h4>
-          <h4>Portland, Maine</h4>
-        </div>
-        <div class="location">
-          <h3><strong>Oakdale</strong></h3>
-          <h4>515 Crescent Avenue</h4>
-          <h4>Second Floor</h4>
-          <h4>Portland, Maine</h4>
-        </div>
-      </div>
+
+        <section class="location">
+          <p class = "prex">         
+              <strong>Downtown</strong><br><br>
+                384 West 4th St <br>
+                Suite 108 <br>
+                Portland, Maine</p>
+        </section>
+        <section class="location">
+            <p class = "prex">         
+                <strong>East Bayside</strong><br><br>
+                3433 Phisherman's Avenu <br>
+                (Northwest Corner)<br>
+                Portland, Maine</p>
+          </section>
+          <section class="location">
+              <p class = "prex">         
+                  <strong>Oakdal</strong><br> <br>
+                  515 Crescent Avenue <br>
+                  Second Floor <br>
+                   Portland, Maine</p>
+            </section>
+
+
+      </artical>
       <footer>
         <h2 id="contact-title">The Tea Cozy</h2>
         <div class="contact">
